# TS6_Droid_CN_PRO

./: .gitignore  commit_main.bat  push_fix.bat  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  rnnoise_bridge.c
app/src/main/java/dev/tslib/: AudioConfig.java  BBCode.java  Channel.java  ChannelTree.java  Client.java  ConnectionState.java  Event.java  Identity.java  MessageBuilder.java  OpusCodec.java  ServerInfo.java  TsLibException.java  User.java
app/src/main/kotlin/dev/tsdroid/: MainActivity.kt  TsDroidApp.kt
app/src/main/kotlin/dev/tsdroid/bridge/: AudioBridge.kt  AvatarCache.kt  FileCache.kt  IconCache.kt  RnNoise.kt  TsClient.kt
app/src/main/kotlin/dev/tsdroid/data/: BookmarkStore.kt  MessageStore.kt  ServerBookmark.kt  SettingsStore.kt
app/src/main/kotlin/dev/tsdroid/service/: TsConnectionService.kt
app/src/main/kotlin/dev/tsdroid/ui/component/: ChannelTree.kt  ChatView.kt  FileManagerDialog.kt  MessageBubble.kt  UserItem.kt
app/src/main/kotlin/dev/tsdroid/ui/screen/: AboutScreen.kt  AppNavigation.kt  ConnectionScreen.kt  ServerScreen.kt
app/src/main/kotlin/dev/tsdroid/update/: AppUpdateManager.kt
app/src/main/kotlin/dev/tsdroid/viewmodel/: ConnectionViewModel.kt  ServerViewModel.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-en/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
gradle/: libs.versions.toml
(+1 files in other folders)
